added beat markers below grid and chose colors

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Magical Music Maker</title>
     <!-- styles -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/grid.css">
   </head>
   <body>
@@ -11,13 +12,14 @@
     <div class="playSurface">
 
       <div class="squareGrid">
-
       </div>
 
     </div>
 
     <!-- scripts -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="js/eventHandlers.js"></script>
     <script type="text/javascript" src="js/grid.js"></script>
+    <!-- <script type="text/javascript" src="js/eventHandlers.js"></script> -->
   </body>
 </html>
