added labels, percussion label still not mobile responsive

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,21 @@
     <link rel="stylesheet" type="text/css" href="css/grid.css">
   </head>
   <body>
-
     <div class="playSurface">
+      <h1>Magical Music Maker</h1>
+
 
       <div class="squareGrid">
       </div>
+      <div class="melodyLabel">
 
+        <h2>Melody</h2>
+      </div>
+      <div class="percLabel">
+
+        <h2>Percussion</h2>
+
+      </div>
     </div>
 
     <!-- scripts -->
