sweeper animation function written, still has a few bugs

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,20 @@
     <div class="playSurface">
       <h1>Magical Music Maker</h1>
 
-
       <div class="squareGrid">
-      </div>
-      <div class="melodyLabel">
 
+      </div>
+
+      <div class="melodyLabel">
         <h2>Melody</h2>
       </div>
       <div class="percLabel">
-
         <h2>Percussion</h2>
-
       </div>
+
+      <button type="button" name="button" class="playButton">Play</button>
+      <button type="button" name="button" class="stopButton">Stop</button>
+
     </div>
 
     <!-- scripts -->
