sweeper and play button functioning properly, next up is actual sounds

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <button type="button" name="button" class="playButton">Play</button>
-      <button type="button" name="button" class="stopButton">Stop</button>
+      <!-- <button type="button" name="button" class="stopButton">Stop</button> -->
 
     </div>
 
