--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,11 @@
 
     <!-- scripts -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script></head>
+
     <script type="text/javascript" src="js/eventHandlers.js"></script>
     <script type="text/javascript" src="js/grid.js"></script>
+    <script type="text/javascript" src="js/musicEvents.js"></script>
     <!-- <script type="text/javascript" src="js/eventHandlers.js"></script> -->
   </body>
 </html>
