basic functionality now working

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <button type="button" name="button" class="playButton">Play</button>
-      <!-- <button type="button" name="button" class="stopButton">Stop</button> -->
+      <button type="button" name="button" class="clearButton">Clear Pattern</button>
 
     </div>
 
@@ -34,6 +34,5 @@
     <script type="text/javascript" src="js/eventHandlers.js"></script>
     <script type="text/javascript" src="js/grid.js"></script>
     <script type="text/javascript" src="js/musicEvents.js"></script>
-    <!-- <script type="text/javascript" src="js/eventHandlers.js"></script> -->
   </body>
 </html>
